[package]
name = "aoc2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.13.0"
itertools = "0.12.0"
md5 = "0.7.0"
nom = "7.1.3"
serde_json = "1.0.108"
svutils = { path = "../svutils" }

[dev-dependencies]
const_format = "0.2.32"
