[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
itertools = "0.12.0"
nalgebra = "0.32.3"
ndarray-linalg = "0.16.0"
nom = "7.1.3"
priority-queue = "1.3.2"
rand = "0.8.5"
regex = "1.10.2"
svutils = { path = "../svutils" }
